helm: Allow user-defined image pull secrets

--- a/unsupported/helm/templates/cron-job.yaml
+++ b/unsupported/helm/templates/cron-job.yaml
@@ -39,6 +39,10 @@ spec:
           tolerations:
 {{ toYaml .Values.tolerations | indent 12 }}
           {{- end }}
+          {{- if .Values.image.pullSecrets }}
+          imagePullSecrets:
+{{ toYaml .Values.image.pullSecrets | indent 12 }}
+          {{- end }}
           containers:
           - name: {{ .Chart.Name }}
             image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
