--- a/unsupported/helm/templates/configmap.yaml
+++ b/unsupported/helm/templates/configmap.yaml
@@ -5,6 +5,6 @@ metadata:
 data:
   rules.yaml: |-
     # example rules configuration to set TTL for arbitrary objects
-    # see https://github.com/hjacobs/kube-janitor for details
+    # see https://codeberg.org/hjacobs/kube-janitor for details
     rules:
 {{ toYaml .Values.kubejanitor.rules | indent 6 }}
