--- a/unsupported/helm/values.yaml
+++ b/unsupported/helm/values.yaml
@@ -10,7 +10,7 @@ kubejanitor:
   once: true
   additionalArgs: []
   # example rules configuration to set TTL for arbitrary objects
-  # see https://github.com/hjacobs/kube-janitor for details
+  # see https://codeberg.org/hjacobs/kube-janitor for details
   rules:
     []
     # - id: require-application-label
